--- a/config.json
+++ b/config.json
@@ -2,29 +2,36 @@
   "job_01": {
     "title": "Shadowsocks",
     "key": "/etc/Shadowsocks.json",
-    "check": "ps aux|grep /bin/ssserver",
+    "check": "ps aux|grep sslocal",
     "run": "/bin/bash ${batch_path}/run_shadowsocks.sh",
     "label": "1"
   },
   "job_02": {
-    "title": "NetSpeeder",
-    "key": "net_speeder eth0 ip",
-    "check": "ps aux|grep net_speeder",
-    "run": "/bin/bash ${batch_path}/run_netspeeder.sh",
-    "label": "1"
+    "title": "JupyterB2G",
+    "key": "8898:localhost:8888",
+    "check": "ps aux|grep 8888",
+    "run": "/bin/bash ${batch_path}/run_jupyterb2g.sh",
+    "label": "0"
   },
   "job_03": {
-    "title": "JupyterB2G",
-    "key": "8889:localhost:8888",
-    "check": "ps aux|grep ssh",
+    "title": "OpenVPN",
+    "key": "/etc/openvpn/client",
+    "check": "ps aux|grep openvpn",
+    "run": "/bin/bash ${batch_path}/run_openvpn.sh",
+    "label": "0"
+  },
+  "job_04": {
+    "title": "JupyterNotebook",
+    "key": "/bin/jupyter-notebook",
+    "check": "ps aux|grep jupyter",
     "run": "/bin/bash ${batch_path}/run_jupyter.sh",
     "label": "1"
   },
-  "job_04": {
-    "title": "placeholder1",
-    "key": "/bin/jupyter-notebook",
-    "check": "ps aux|grep jupyter-notebook",
-    "run": "/bin/bash ${batch_path}/run_jupyter.sh",
+  "job_05": {
+    "title": "SSHB2G",
+    "key": "8822:localhost:22",
+    "check": "ps aux|grep 22",
+    "run": "/bin/bash ${batch_path}/run_sshb2g.sh",
     "label": "0"
   }
 }
