--- a/config.json
+++ b/config.json
@@ -1,51 +1,17 @@
-{
+{ 
   "job_01": {
     "title": "Shadowsocks",
     "key": "/etc/Shadowsocks.json",
-    "check": "ps aux|grep sslocal",
+    "check": "ps aux|grep ssserver",
     "run": "/bin/bash ${batch_path}/run_shadowsocks.sh",
     "label": "1"
   },
   "job_02": {
-    "title": "JupyterB2G",
-    "key": "8898:localhost:8888",
-    "check": "ps aux|grep 8888",
-    "run": "/bin/bash ${batch_path}/run_jupyterb2g.sh",
-    "label": "1"
-  },
-  "job_03": {
-    "title": "PostgresB2G",
-    "key": "5422:localhost:5432",
-    "check": "ps aux|grep 5432",
-    "run": "/bin/bash ${batch_path}/run_postgresb2g.sh",
-    "label": "1"
-  },
-  "job_04": {
-    "title": "Onedrive",
-    "key": "/usr/bin/onedrive",
-    "check": "ps aux|grep onedrive",
-    "run": "/bin/bash ${batch_path}/run_onedrive.sh",
-    "label": "1"
-  },
-  "job_05": {
-    "title": "JupyterNotebook",
-    "key": "/bin/jupyter-notebook",
-    "check": "ps aux|grep jupyter",
-    "run": "/bin/bash ${batch_path}/run_jupyter.sh",
-    "label": "1"
-  },
-  "job_06": {
-    "title": "SSHB2G",
-    "key": "8812:localhost:22",
-    "check": "ps aux|grep 22",
-    "run": "/bin/bash ${batch_path}/run_sshb2g.sh",
-    "label": "1"
-  },
-  "job_07": {
-    "title": "HiveB2G",
-    "key": "8078:localhost:8088",
-    "check": "ps aux|grep 8088",
-    "run": "/bin/bash ${batch_path}/run_hiveb2g.sh",
+    "title": "NetSpeeder",
+    "key": "/opt/netspeeder/net_speeder",
+    "check": "ps aux|grep net_speeder",
+    "run": "/bin/bash ${batch_path}/run_netspeeder.sh",
     "label": "1"
   }
 }
+
